tsyringe adicionado, documentação finalizada
